# boatrace-ai

./: .gitignore  DAILY_IMPROVEMENT_PROMPT.md  README.md  pyproject.toml  requirements.txt
artifacts/backtests/: roi_history.json  strategy_state.json
configs/: base.json
docs/: implementation-plan.md  source-registry.md
logs/: .gitkeep
scripts/: daily_improve.sh
src/boatrace_ai/: __init__.py  __main__.py  betting.py  calibration.py  cli.py  trifecta.py
src/boatrace_ai.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
src/boatrace_ai/collect/: __init__.py  history.py  official.py  official_download.py
src/boatrace_ai/evaluate/: __init__.py  backtest.py
src/boatrace_ai/features/: dataset.py
src/boatrace_ai/note/: __init__.py  evening.py  morning.py
src/boatrace_ai/predict/: __init__.py  baseline.py  model.py
src/boatrace_ai/report/: __init__.py  live.py
src/boatrace_ai/store/: __init__.py  sqlite.py
src/boatrace_ai/train/: __init__.py  model.py
tests/: test_cli.py  test_history.py  test_note.py  test_official.py  test_official_download.py  test_pipeline.py  test_report_live.py  test_store.py
